.mutt/cache/bodies/imaps:unixbhaskar@gmail.com@imap.gmail.com:993/INBOX/2-230812
Delivered-To: unixbhaskar@gmail.com
Received: by 2002:a19:4c88:0:0:0:0:0 with SMTP id z130csp1722587lfa;
        Sun, 29 Mar 2020 09:14:50 -0700 (PDT)
X-Google-Smtp-Source: ADFU+vsZwXhv9Bxl5duU/wBz+pJo3emOEobCExAYzcJJ+NXo5ehwi/WNRfbcDFOJYt4ubaQHcKZm
X-Received: by 2002:aca:1812:: with SMTP id h18mr5364873oih.107.1585498490758;
        Sun, 29 Mar 2020 09:14:50 -0700 (PDT)
ARC-Seal: i=1; a=rsa-sha256; t=1585498490; cv=none;
        d=google.com; s=arc-20160816;
        b=HniX/ilItepZFE++nMRacAYZEvSZGAaIOc3Cxc0zQ3oA752F8LZlhRSidYxiHJIHL3
         rvYsMh7c1e2KxC4S2m5WESKjIvzTdqE34FbiLScx5sEw12UdojDJxKKrV7sN68BqN/Wc
         uEAtavt6ucg9Ie/B6kN1KqNV7p1qyNcBWk2CUlTfTDgiTdfZQ7wHNrINLw5z049+uKUV
         EzanfZjNJ2ypQP+Ly+HQVC/tHMeIUQtY7dUVJjONxOoVuxa2J1hKra2pytVPidPjHeBo
         fLoBax7NNGFSBC7zhDxuyT257wePGSYhuQn16ybEqbwk2sIdm5WEWnncsAJOQPv9MzwI
         r6nw==
ARC-Message-Signature: i=1; a=rsa-sha256; c=relaxed/relaxed; d=google.com; s=arc-20160816;
        h=list-id:precedence:sender:content-transfer-encoding
         :content-language:in-reply-to:mime-version:user-agent:date
         :message-id:from:references:to:subject:dkim-signature;
        bh=3aGUFTlDFLNPEPyNqpXzRGp9fSJaJ2O8HpjtLH83Bzc=;
        b=MMH+uGcuGru9sG2sr4OVjPOP3gQnhWNqJreO5M3we4MXQ3xXYHvUA9C9Wsprob2D/n
         o44YgXA/PdQvkNIY+kMjVhSkBpJRpkhDMWFAZmSGRibtTxk2fzMx+c8N+PGvC0g+55Dz
         v0B00xpu9nHJfuB8M0Drm37c+UOz2t0WA3HKBQvmuiyR6U60mzbNMWSYXOrRMXzwyDQV
         G3RosMAw/NQYmLx+yirz27pJ7c5aQ4j0bL+UrjHkwtaOvxH7fcqh7lAUXRRDw4dw7ems
         I9RnRkdOo3ARLTdw8dt/Hm+Mur7gicKl98cM/yU9C8PS0sDGcCqxnDRXvu0oFSYXfg6z
         TLWA==
ARC-Authentication-Results: i=1; mx.google.com;
       dkim=fail header.i=@infradead.org header.s=bombadil.20170209 header.b=toUsYu1d;
       spf=pass (google.com: best guess record for domain of linux-kernel-owner@vger.kernel.org designates 209.132.180.67 as permitted sender) smtp.mailfrom=linux-kernel-owner@vger.kernel.org
Return-Path: <linux-kernel-owner@vger.kernel.org>
Received: from vger.kernel.org (vger.kernel.org. [209.132.180.67])
        by mx.google.com with ESMTP id r82si5081814oia.155.2020.03.29.09.14.37;
        Sun, 29 Mar 2020 09:14:50 -0700 (PDT)
Received-SPF: pass (google.com: best guess record for domain of linux-kernel-owner@vger.kernel.org designates 209.132.180.67 as permitted sender) client-ip=209.132.180.67;
Authentication-Results: mx.google.com;
       dkim=fail header.i=@infradead.org header.s=bombadil.20170209 header.b=toUsYu1d;
       spf=pass (google.com: best guess record for domain of linux-kernel-owner@vger.kernel.org designates 209.132.180.67 as permitted sender) smtp.mailfrom=linux-kernel-owner@vger.kernel.org
Received: (majordomo@vger.kernel.org) by vger.kernel.org via listexpand
        id S1728357AbgC2QMh (ORCPT <rfc822;davidalro.kernel@gmail.com>
        + 99 others); Sun, 29 Mar 2020 12:12:37 -0400
Received: from bombadil.infradead.org ([198.137.202.133]:49010 "EHLO
        bombadil.infradead.org" rhost-flags-OK-OK-OK-OK) by vger.kernel.org
        with ESMTP id S1728209AbgC2QMg (ORCPT
        <rfc822;linux-kernel@vger.kernel.org>);
        Sun, 29 Mar 2020 12:12:36 -0400
DKIM-Signature: v=1; a=rsa-sha256; q=dns/txt; c=relaxed/relaxed;
        d=infradead.org; s=bombadil.20170209; h=Content-Transfer-Encoding:
        Content-Type:In-Reply-To:MIME-Version:Date:Message-ID:From:References:To:
        Subject:Sender:Reply-To:Cc:Content-ID:Content-Description;
        bh=3aGUFTlDFLNPEPyNqpXzRGp9fSJaJ2O8HpjtLH83Bzc=; b=toUsYu1doW4nFxIJJE0wkgehpy
        8+pWXT6yv3an/sQQQiVMJwupq1G8M6yulZNNRncItGo1QciGQ+sPJqNj1MEoKE7qGcZ9ZnjqWjp3q
        5uUS1IPd05dr2ID4F5Aqsoq/DbioJ8xsTjSM01ZmjsQWqgDesaxqv6mGB9pe2NGBSGlFTNS7rcszR
        7hSNi5Xdju2IC0d6shFHKh8ChqYXxCSG3sTQ5satEZ0Df05HGtPptespIxivYUJGXpXsGmI7ZYeAC
        +j1xYIr0jJY1aqNYZ9SM1VclC5a5aM0LzuHhux68gAPMbOjikBxS8iXd4SHDWM1+ECgnSh1Pfbo0q
        J/S3YhJA==;
Received: from [2601:1c0:6280:3f0::19c2]
        by bombadil.infradead.org with esmtpsa (Exim 4.92.3 #3 (Red Hat Linux))
        id 1jIaY4-0000MB-5D; Sun, 29 Mar 2020 16:12:32 +0000
Subject: Re: mmotm 2020-03-28-22-17 uploaded (staging/octeon/)
To:     akpm@linux-foundation.org, broonie@kernel.org,
        linux-fsdevel@vger.kernel.org, linux-kernel@vger.kernel.org,
        linux-mm@kvack.org, linux-next@vger.kernel.org, mhocko@suse.cz,
        mm-commits@vger.kernel.org, sfr@canb.auug.org.au,
        "netdev@vger.kernel.org" <netdev@vger.kernel.org>,
        Greg Kroah-Hartman <gregkh@linuxfoundation.org>,
        Aaro Koskinen <aaro.koskinen@iki.fi>,
        "devel@driverdev.osuosl.org" <devel@driverdev.osuosl.org>
References: <20200329051805.kfaUSHrn4%akpm@linux-foundation.org>
From:   Randy Dunlap <rdunlap@infradead.org>
X-Enigmail-Draft-Status: N11100
Message-ID: <873495e9-d254-cb66-7a83-2517505a2b9b@infradead.org>
Date:   Sun, 29 Mar 2020 09:12:31 -0700
User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:68.0) Gecko/20100101
 Thunderbird/68.6.0
MIME-Version: 1.0
In-Reply-To: <20200329051805.kfaUSHrn4%akpm@linux-foundation.org>
Content-Type: text/plain; charset=utf-8
Content-Language: en-US
Content-Transfer-Encoding: 8bit
Sender: linux-kernel-owner@vger.kernel.org
Precedence: bulk
List-ID: <linux-kernel.vger.kernel.org>
X-Mailing-List: linux-kernel@vger.kernel.org

On 3/28/20 10:18 PM, akpm@linux-foundation.org wrote:
> The mm-of-the-moment snapshot 2020-03-28-22-17 has been uploaded to
> 
>    http://www.ozlabs.org/~akpm/mmotm/
> 
> mmotm-readme.txt says
> 
> README for mm-of-the-moment:
> 
> http://www.ozlabs.org/~akpm/mmotm/
> 
> This is a snapshot of my -mm patch queue.  Uploaded at random hopefully
> more than once a week.
> 
> You will need quilt to apply these patches to the latest Linus release (5.x
> or 5.x-rcY).  The series file is in broken-out.tar.gz and is duplicated in
> http://ozlabs.org/~akpm/mmotm/series


on i386 or x86_64:

../drivers/staging/octeon/ethernet-tx.c: In function ‘cvm_oct_xmit’:
../drivers/staging/octeon/ethernet-tx.c:358:2: error: implicit declaration of function ‘skb_reset_tc’; did you mean ‘skb_reserve’? [-Werror=implicit-function-declaration]
  skb_reset_tc(skb);
  ^~~~~~~~~~~~

It looks like this inline function has been removed from
<net/sch_generic.h>.


Looks like it should be this change:

-	skb_reset_tc(skb);
+	skb_reset_redirect(skb);


-- 
~Randy
Reported-by: Randy Dunlap <rdunlap@infradead.org>
